fix(auth): emailPendente false para segunda empresa; fix(cors): ler origem via env var
- AuthService: segunda empresa retorna TokenResponseDTO sem emailPendente
  para o front diferenciar do fluxo de verificacao de e-mail
- SecurityConfig: CORS le app.cors.allowed-origins em vez de hardcoded *
- application.properties: CORS_ORIGINS default * (sem breaking change)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>